--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
      <Compile Include="Assets\Classes\MainThreadHandler.cs" />
      <Compile Include="Assets\Classes\MenuController.cs" />
      <Compile Include="Assets\Classes\OffencePlayer.cs" />
+     <Compile Include="Assets\Classes\PieMenuController.cs" />
      <Compile Include="Assets\Classes\Play.cs" />
      <Compile Include="Assets\Classes\PlayerToken.cs" />
      <Compile Include="Assets\Classes\Responsibility.cs" />
@@ -90,7 +91,7 @@
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.3/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="Parse.Unity">
- <HintPath>C:/Users/Jason/Documents/GitHub/cis454-football/Assets/Parse.Unity.dll</HintPath>
+ <HintPath>C:/Users/Matt/Documents/GitHub/cis454-football/Assets/Parse.Unity.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
